--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Super Epic Tile Layer</title>
   </head>
   <body>
+    <header>
+      <h1>Super Epic Tile Layer</h1>
+      <p>$35</p>
+      <p>(In stock)</p>
+    </header>
+    <img src="images/placeholder-4by3.svg" alt="">
+
+
 
   </body>
 </html>
