--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Super Epic Tile Layer</title>
+    <title>Super-Epic-Tile-Layer</title>
   </head>
   <body>
     <header>
@@ -11,6 +11,14 @@
       <p>(In stock)</p>
     </header>
     <img src="images/placeholder-4by3.svg" alt="">
+    <dl class="gameinfo">
+      <dt>Ages</dt>
+      <dd>8+</dd>
+      <dt>Number players</dt>
+      <dd>2-5</dd>
+      <dt>length</dt>
+      <dd>45 min</dd>
+    </dl>
 
 
 
