--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<article>
   <head>
     <meta charset="utf-8">
     <title>Super-Epic-Tile-Layer</title>
@@ -18,9 +19,11 @@
       <dd>2-5</dd>
       <dt>length</dt>
       <dd>45 min</dd>
+      <dt>Average Rating</dt>
+      <dd>45 min</dd>
     </dl>
   <nav>
-    <a href="#">[Add to wishlist]</a>
+    <a href="#">[Add to Wishlist!]</a>
     <a href="#"> [Add to cart]</a>
   </nav>
     <footer>
@@ -49,11 +52,11 @@
         <dd>2011</dd>
         <dt>Awards</dt>
         <dd>
-          <ol>
+          <ul>
             <li>2012 Spiel of the Year Winner</li>
             <li>2012 Golden Pyramid Game Award Winner</li>
             <li>2012 Geek Website Game of the Year Nominee</li>
-          </ol>
+          </ul>
         </dd>
       </dl>
     </footer>
@@ -67,4 +70,5 @@
       <p>This game is <strong>bloody amazing!</strong> My mates and I totally love playin it.</p>
   </aside>
   </body>
+</article>
 </html>
